UI: Fix dark mode
We previously used Nuxt to handle dark themes; when that got removed the
code needed to be fixed up to apply the theming correctly.

--- a/pkg/rancher-desktop/assets/styles/themes/_dark.scss
+++ b/pkg/rancher-desktop/assets/styles/themes/_dark.scss
@@ -1,4 +1,4 @@
-.theme-dark {
+:root {
   // Local variables for reused colors
 
   //dark sidebar
